<resources>
    <string name="app_name">Ratatouille</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>

    <string name="meal_of_the_day">Meal of the day</string>
    <string name="view_all">View All</string>
    <string name="instructions">Instructions :</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Catgory</string>
    <string name="ingredient">Ingredient</string>
    <string name="area">Area</string>
    <string name="name">name</string>
    <string name="planMeals">Plan meals</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="default_web_client_id">521931857079-92d5ot7mhaqr7umfdgj7j191rlhcm021.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>


</resources>