<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/planMeals" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/displayIngredientsFragment"
        android:icon="@drawable/baseline_shopping_bag_48"
        android:title="@string/search" />

    <item
        android:id="@id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>